--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,6 @@ version = "mc1.7.2-r1"
 group= "mods.flammpfeil.reincarnation" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Reincarnation"
 
-modprofile{
-	modname = "Reincarnation"
-	modid = "reincarnation"
-}
-
 minecraft {
     version = "1.7.2-10.12.0.1024"
     assetDir = "eclipse/assets"
@@ -37,8 +32,7 @@ processResources
         include 'mcmod.info'
 
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-        expand 'modname':project.modprofile.modname, 'modid':project.modprofile.modname
+        expand 'version':project.version, 'mcversion':project.minecraft.version, 'modname':"Reincarnation", 'modid':"flammpfeil.reincarnation"
     }
 
     // copy everything else, thats not the mcmod.info
